force-app/main/default/objects/BACS_Report_Detail__c/BACS_Report_Detail__c.object-meta.xml
<CustomObject>
    <label>BACS Report Detail</label>
    <nameField>
        <displayFormat>BACS-{000000}</displayFormat>
        <label>BACS Report Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BACS Report Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>