force-app/main/default/objects/BACS_Report_Detail__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BACS Report Details</relationshipLabel>
    <relationshipName>BACS_Report_Details</relationshipName>
    <type>Lookup</type>
</CustomField>