force-app/main/default/objects/BACS_Report_Detail__c/fields/Account_Number_New__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_New__c</fullName>
    <label>Account Number (New)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>