force-app/main/default/objects/BACS_Report_Detail__c/fields/BACS_Report__c.field-meta.xml
<CustomField>
    <fullName>BACS_Report__c</fullName>
    <label>BACS Report</label>
    <referenceTo>BACS_Report__c</referenceTo>
    <relationshipLabel>BACS Report Details</relationshipLabel>
    <relationshipName>BACS_Report_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>