force-app/main/default/objects/BACS_Report_Detail__c/fields/Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Membership_Number__c</fullName>
    <label>Membership Number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>