force-app/main/default/objects/BACS_Report_Detail__c/fields/Name_New__c.field-meta.xml
<CustomField>
    <fullName>Name_New__c</fullName>
    <label>Name (New)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>