force-app/main/default/objects/BACS_Report_Detail__c/fields/Sort_Code_New__c.field-meta.xml
<CustomField>
    <fullName>Sort_Code_New__c</fullName>
    <label>Sort Code (New)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>